[package]
name = "exchange"
version = "0.1.0"
authors = ["Connor Stein <cstein@paxos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.12.35"
log = "0.4.1"
url="2.1.0"
serde = {version="1.0.102", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.3"
diesel = { version = "1.0.0", features = ["postgres"] }
uuid = {version = "0.8.1", features = ["v4", "serde"]}